// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a large inverse loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__large-inverse"
  role="alert"
/>
`;

exports[`should render a massive loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__massive-default"
  role="alert"
/>
`;

exports[`should render a medium loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__medium-default"
  role="alert"
/>
`;

exports[`should render a modal loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__modal-default"
  role="alert"
/>
`;

exports[`should render a small inverse loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__small-inverse"
  role="alert"
/>
`;

exports[`should render a tiny loader correctly 1`] = `
<div
  aria-busy={true}
  className="components-loader-index-m__tiny-default"
  role="alert"
/>
`;
